# AV_risk_model

./: CMakeLists.txt  README.md  car_risk_model.cpp  car_risk_model.h  ego.hpp  main_test.cpp  obscar.hpp  road_risk_model.cpp  road_risk_model.h  small_dynamic_obj_model.h
risk field matlab ver/: Li.m  car.m  car_model.m  car_yaw.m  cdf.m  change.mat  d30.mat  lane_angle.m  play_trajectories.m  road.m  road_riskfield.m  special_car.m  ve_ac.m
src/: lane_det.cpp  main_test.cpp
src/include/: car_risk_model.h  cyc.hpp  draw.hpp  ego.h  ego.hpp  lane.hpp  obscar.hpp  ped.hpp  pedstrian.h  pred.h  road_risk_model.h  small_dynamic_obj_model.h
src/model/: car_risk_model.cpp  car_risk_model.h  ego.cpp  ego.hpp  pedestrian.cpp  road_risk_model.cpp  small_dynamic_model.cpp
